[package]

name = "augeas"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>", "David Lutterkort <lutter@watzmann.net>"]
description = "Augeas bindings for Rust"
license = "MIT"
keywords = ["augeas", "bindings"]
repository = "https://github.com/panicbit/rust-augeas"


[dependencies]
libc = "0.2.4"

[dependencies.augeas_sys]
path = "augeas_sys/"
version = "0.0.2"
