[package]

name = "augeas"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>", "David Lutterkort <lutter@watzmann.net>"]
description = "Augeas bindings for Rust"
license = "MIT"
keywords = ["augeas", "bindings"]
repository = "https://github.com/panicbit/rust-augeas"


[dependencies]
augeas_sys = { path = "augeas_sys" }
bitflags = "1.0.4"
libc = "0.2.43"

[workspace]
