[package]
name = "augeas_sys"
version = "0.0.2"
authors = ["panicbit <panicbit.dev@gmail.com>"]
description = "Low level bindings for augeas"
license = "MIT"
keywords = ["augeas", "bindings"]
repository = "https://github.com/panicbit/augeas_sys"

[dependencies]

[build-dependencies]
bindgen = "0.43.0"
pkg-config = "0.3.14"
